app/assets/stylesheets/gs/typography.css.scss
h5, .h5 { text-transform: uppercase; letter-spacing: 1px;}
h6, .h6 { @extend .open-sans_i; }

.subtitle-lg { font-size: 24px}
.subtitle-md { font-size: 20px}

.gold-bar { width:30px; margin-left: 0px; margin-bottom: 10px;  height: 3px; background-color: $brand-secondary }
.black {color: $gray-base-color}
.font-size-xs    {font-size: $font-size-xs}
.font-size-medium {font-size: $font-size-medium}

.font-size-small {font-size: $font-size-small}
.font-size-large {font-size: $font-size-large}
.font-size-block {font-size: $font-size-block}


.search-text {
  height: 46px;
  font: normal 14px/20px 'opensans-regular',Arial,Helvetica,sans-serif;
  color: #666;
  padding-left: 8px;
  border: 1px solid #b8b8b8;
  border-radius: 3px;
}

.gs-active-link {
  color: #007299;
}

.toolbar-text {
  font-size: 16px;
}

p, a {
  font: $font-size-base 'opensans-regular',Arial,Helvetica,sans-serif;
}

.invert-colors{
  background-color: $gray-darkest;
  p, a{color:$gray; @extend .small;}
  h1,h2,h3,h4,h5,h6{color:$gray-dark}
  hr {border-color: #444;}
  ul {@extend .list-unstyled;}
  .contact-content {color: #FFFFFF; font-size: 16px;}
  &.bg-darker {background-color: #2b2b2b}
}

.invert-colors-home {
  a{color:$gray;}
}

.best-known-for {
  font-size: $font-size-block;
}

.text_fff { color: #ffffff; }
.text_000 { color: #000000; }
.text_orange { color: #ff9369; }
.text_purple { color: #826e92; }

.text_font_large {font-size: 24px;}

.uc { text-transform: uppercase; }

@media (max-width:480px){
  h1{font-size:26px; font-family: $headings-font-family-bold}
  h2{font-size:22px; font-family: $headings-font-family-bold}
  .best_known_for{font-size: 20px}

}

.advertisement-text {
  width: 100px;
  color: $gray-dark;
  font-size: 12px;
}

.link-darkgray {
  color: #3d3d3d;
}

.brand-secondary {
  color: $brand-secondary;
}

.brand-primary {
  color:$brand-primary;
}

.emphasis-color {
  color: $emphasis-color;
}

.gray-dark {
  color: $gray-dark;
}

.gray-darker {
  color: $gray-darker;
}

.gray-light {
  color: $gray-light;
}

.dark-blue-bg {
  background-color: $blue-dark;
}

.inverted-text {
  color: white;
}

.inverted-text:hover {
  color: white;
}

.jumbo-header {
  font-size: 60px;
}
.jumbo-text {
  font-size: 80px;
  line-height: 60px;
}

.jumbo-text-sub {
  font-size: 40px;
  line-height: 40px;
}

.default_rating_circle {
  width: 72px;
  height: 72px;
  border: #CCCCCC solid thin;
  border-radius: 36px;
  font-size: 32px;
}
.default_rating_rect {
  letter-spacing: 1px;
  border: #CCCCCC solid thin;
  text-transform: uppercase;
  border-radius: 4px;
  font-size: 24px;
  &.small {
    font-size: 14px;
  }
}

.bg-white { background-color: #FFFFFF; }
.bg-light-gray { background-color: $well-bg; }
.bg-emphasis { background-color: $emphasis-color; }

.tdn { text-decoration: none; }


.mrm_sm {margin-right: 10px;}
.mrl_lg {margin-right: 0px;}
.pbm_sm {padding-bottom: 0px;}

@media (max-width:480px) {
  h1 { font-size:26px; font-family: $headings-font-family-bold; }
  h2 { font-size:22px; font-family: $headings-font-family-bold; }
  .best-known-for { font-size: 20px; }
  .subtitle-lg {font-size: 20px}
  .subtitle-md {font-size: 16px}
}

@media (min-width: 990px) {
  .sm-black-lg-white-text, .sm-black-lg-white-text:hover {
    color: white;
  }
}

@media (max-width: 990px) {
  .sm-black-lg-white-text, .sm-black-lg-white-text:hover {
    color: black;

  }
}

@media (min-width:481px) and (max-width:768) {
  h1{font-size:32px;}
  h2{font-size:26px;}
  .best-known-for{font-size: 22px}
}

@media only screen and (min-width: 768px) {
  .lar {
    text-align: right;
  }
  .pbm_sm {padding-bottom: 10px;}
}

@media only screen and (max-width: 767px) {
  .jumbo-header {font-size: 32px}
  .center_when_small {text-align: center}
  .text_font_large {font-size: 36px}
  .mrm_sm {margin-right: 0}
}

@media (min-width: 1200px) {
  .mrl_large {margin-right: 15px}
}


// Translate classes to hide some of googles' images and top gadget bar.
.goog-te-banner-frame.skiptranslate {display: none !important;}
body { top: 0px !important; }
.goog-te-gadget-icon {display:none;}
.goog-te-gadget-simple a {text-decoration: none !important;}


.btn-border-green{
  border: 1px #8fcdaa solid;
  //  box-shadow :1px 1px 2px #E6e6e6;
}
.btn-bg-green {
  background-color: #8fcdaa;
  color: #FFFFFF;
  &:focus {
    color: #FFFFFF;
  }
}

.square {
  width: 13px;
  height: 13px;
}
.state_bg_1 { background-color: #6BBEB3 }
.state_bg_2 { background-color: #E97F6D }
.state_bg_3 { background-color: #A192AD }
.state_bg_4 { background-color: #C9DA7A }

